...
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome Back"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/primaryDarkColor"
            android:textAlignment="center"
            android:layout_marginBottom="8dp"/>

...
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tvAdminPortal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Admin Portal"
            android:textSize="14sp"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_marginTop="8dp"/>

...
